force-app/main/default/objects/Notice__c/Notice__c.object-meta.xml
<CustomObject>
    <description>Notices issued by the landlord to tenants. Can be targeted at all tenants in a property or a specific tenancy. Tenants view their notices via the Experience Cloud community portal.</description>
    <label>Notice</label>
    <nameField>
        <label>Notice Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>