force-app/main/default/objects/Notice__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <description>Controls who sees this notice. All Tenants = all active tenants in the linked Property. Specific Tenant = only the tenant linked via the Tenancy__c field.</description>
    <label>Audience</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Tenants in Property</fullName>
                <default>true</default>
                <label>All Tenants in Property</label>
            </value>
            <value>
                <fullName>Specific Tenant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>