force-app/main/default/objects/Notice__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>Full body text of the notice. Displayed to tenants in the community portal.</description>
    <label>Notice Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>