force-app/main/default/objects/Notice__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>The date from which this notice is visible and effective for tenants.</description>
    <label>Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>