force-app/main/default/objects/Notice__c/fields/Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether an email notification has been dispatched to the relevant tenant(s) for this notice.</description>
    <label>Email Sent</label>
    <type>Checkbox</type>
</CustomField>