force-app/main/default/objects/Notice__c/fields/Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_Date__c</fullName>
    <description>Date and time when the email notification was sent to the tenant(s).</description>
    <label>Email Sent Date</label>
    <type>DateTime</type>
</CustomField>