force-app/main/default/objects/Notice__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>The date after which this notice is no longer shown to tenants in the community portal. Leave blank for permanent notices.</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>