force-app/main/default/objects/Notice__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Invoice this notice relates to. Required for Rent Reminder and Rent Arrears notices; drives the billing context (amount, due date, period) shown on the notice and captures the Tenancy indirectly via Invoice__c.Tenancy__c.</description>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Notices</relationshipLabel>
    <relationshipName>Notices</relationshipName>
    <type>Lookup</type>
</CustomField>