force-app/main/default/objects/Notice__c/fields/Notice_Comment__c.field-meta.xml
<CustomField>
    <fullName>Notice_Comment__c</fullName>
    <description>Internal landlord/property-manager notes about this notice (e.g. why it was reissued). Not visible to tenants in the community portal.</description>
    <label>Notice Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>