force-app/main/default/objects/Notice__c/fields/Notice_Iteration__c.field-meta.xml
<CustomField>
    <fullName>Notice_Iteration__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of times this notice has been issued/reissued to the tenant. Visible to tenants in the community portal; maintained automatically by Apex.</description>
    <label>Notice Iteration</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>