force-app/main/default/objects/Notice__c/fields/Notice_Type__c.field-meta.xml
<CustomField>
    <fullName>Notice_Type__c</fullName>
    <description>Category of the notice. Drives the visual presentation and urgency in the community portal.</description>
    <label>Notice Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Information</fullName>
                <default>true</default>
                <label>General Information</label>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Scheduled Maintenance</fullName>
            </value>
            <value>
                <fullName>Rent Increase</fullName>
            </value>
            <value>
                <fullName>Lease Renewal</fullName>
            </value>
            <value>
                <fullName>Eviction Notice</fullName>
            </value>
            <value>
                <fullName>Inspection Notice</fullName>
            </value>
            <value>
                <fullName>Entry Notice</fullName>
            </value>
            <value>
                <fullName>Rent Reminder</fullName>
            </value>
            <value>
                <fullName>Rent Arrears</fullName>
            </value>
            <value>
                <fullName>Breach of Contract</fullName>
            </value>
            <value>
                <fullName>Contract Termination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>