force-app/main/default/objects/Notice__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The property this notice applies to. Required when Audience is All Tenants (broadcasts to all tenants in the property).</description>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Notices</relationshipLabel>
    <relationshipName>Notices</relationshipName>
    <type>Lookup</type>
</CustomField>