force-app/main/default/objects/Notice__c/fields/Tenancy__c.field-meta.xml
<CustomField>
    <fullName>Tenancy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional: link this notice to a specific tenancy to target an individual tenant. Leave blank when notice targets all tenants of a property (use Property__c instead).</description>
    <label>Tenancy</label>
    <referenceTo>Tenancy__c</referenceTo>
    <relationshipLabel>Notices</relationshipLabel>
    <relationshipName>Notices</relationshipName>
    <type>Lookup</type>
</CustomField>