force-app/main/default/objects/Notice__c/validationRules/Invoice_Required_For_Rent_Notice_Types.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Required_For_Rent_Notice_Types</fullName>
    <active>true</active>
    <description>Invoice must be set for notice types that are issued against a specific invoice (Rent Reminder, Rent Arrears).</description>
    <errorConditionFormula>AND(
    ISBLANK(Invoice__c),
    OR(
        ISPICKVAL(Notice_Type__c, &quot;Rent Reminder&quot;),
        ISPICKVAL(Notice_Type__c, &quot;Rent Arrears&quot;)
    )
)</errorConditionFormula>
    <errorDisplayField>Invoice__c</errorDisplayField>
    <errorMessage>Invoice is required when the Notice Type is &quot;Rent Reminder&quot; or &quot;Rent Arrears&quot;.</errorMessage>
</ValidationRule>