force-app/main/default/objects/Notice__c/validationRules/Property_Required_For_All_Tenants.validationRule-meta.xml
<ValidationRule>
    <fullName>Property_Required_For_All_Tenants</fullName>
    <active>true</active>
    <description>Property must be set when the notice audience is All Tenants in Property.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Audience__c, "All Tenants in Property"),
    ISBLANK(Property__c)
)</errorConditionFormula>
    <errorMessage>Property is required when the Audience is &quot;All Tenants in Property&quot;.</errorMessage>
    <errorDisplayField>Property__c</errorDisplayField>
</ValidationRule>