force-app/main/default/objects/Notice__c/validationRules/Tenancy_Required_For_Notice_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Tenancy_Required_For_Notice_Type</fullName>
    <active>true</active>
    <description>Tenancy must be set for notice types that always target an individual tenant, regardless of the Audience value.</description>
    <errorConditionFormula>AND(
    ISBLANK(Tenancy__c),
    OR(
        ISPICKVAL(Notice_Type__c, &quot;Eviction Notice&quot;),
        ISPICKVAL(Notice_Type__c, &quot;Inspection Notice&quot;),
        ISPICKVAL(Notice_Type__c, &quot;Entry Notice&quot;),
        ISPICKVAL(Notice_Type__c, &quot;Rent Reminder&quot;),
        ISPICKVAL(Notice_Type__c, &quot;Rent Arrears&quot;),
        ISPICKVAL(Notice_Type__c, &quot;Breach of Contract&quot;),
        ISPICKVAL(Notice_Type__c, &quot;Contract Termination&quot;)
    )
)</errorConditionFormula>
    <errorDisplayField>Tenancy__c</errorDisplayField>
    <errorMessage>Tenancy is required when the Notice Type is Eviction Notice, Inspection Notice, Entry Notice, Rent Reminder, Rent Arrears, Breach of Contract, or Contract Termination.</errorMessage>
</ValidationRule>